--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
       <div><img src="https://img.icons8.com/ios/50/sql.png" alt="SQLi" />SQL Injection</div>
       <div><img src="https://img.icons8.com/ios/50/script.png" alt="XSS" />Cross-Site Scripting (XSS)</div>
       <div><img src="https://img.icons8.com/ios/50/hacker.png" alt="CSRF" />CSRF</div>
+      <div><img src="https://img.icons8.com/external-flatart-icons-outline-flatarticons/64/external-xss-cyber-security-flatart-icons-outline-flatarticons.png" alt="XSS Logo" />XSS Logo</div>
     </div>
   </div>
 
