--- a/index.html
+++ b/index.html
@@ -111,9 +111,8 @@
     <h2>Skills - Web Hacking</h2>
     <div class="skills">
       <div><img src="https://img.icons8.com/ios/50/sql.png" alt="SQLi" />SQL Injection</div>
-      <div><img src="https://img.icons8.com/ios/50/script.png" alt="XSS" />Cross-Site Scripting (XSS)</div>
+      <div><img src="https://c.top4top.io/p_34937f3aq0.jpg" alt="XSS Logo" />Cross-Site Scripting (XSS)</div>
       <div><img src="https://img.icons8.com/ios/50/hacker.png" alt="CSRF" />CSRF</div>
-      <div><img src="https://c.top4top.io/p_34937f3aq0.jpg" alt="XSS Logo" />XSS Logo</div>
     </div>
   </div>
 
