--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     .logo {
       width: 150px;
       height: 150px;
-      background: url('your-logo.png') no-repeat center center / contain;
+      background: url('https://c.top4top.io/p_3493qql3x0.png') no-repeat center center / contain;
       margin-bottom: 30px;
     }
 
